--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-pdf": "^7.1.2",
-    "react-router-dom": "^6.14.0",
-    "react-scroll": "^1.8.9"
+    "react-router-dom": "^6.14.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
