--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "firebase": "^10.4.0",
     "framer-motion": "^10.12.18",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-pdf": "^7.1.2",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
